# toy-example-gpu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1proc_4gpu.sh  1process_4gpu.sh  1process_4gpu_nsight.sh  4process_4gpu.sh  README.md  bash_commands_save.sh  mnist.ipynb  pyproject.toml
.github/workflows/: repo-init.yml
examplegpu/src/: create_dummy_large_dataset.py  disk_perf_tracker.py  logger.py  main.py  model_test.py  model_train.py
examplegpu/src/dataloader/: mnist_dataloader.py
examplegpu/src/models/: cnn.py
