[project]
name = "ai-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "pre-commit>=4.2.0",
 "pydantic>=2.10.6",
 "pytest>=8.3.5",
 "python-dotenv>=1.0.1",
 "torch>=2.6.0",
 "torchvision>=0.21.0",
 "wandb>=0.19.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "ruff>=0.11.1",
]


[tool.ruff]
# Set the maximum line length to 79.
line-length = 100

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = [
    # Import sort
    "I",
    # Flake8-bugbear (https://github.com/PyCQA/flake8-bugbear)
    # Detects likely bugs, design problems or bad practices in code.
    "B",

]
# extend-select = ["E501"]
